update routes_dtp and swagger
